tests/neg/while5.js
// Example done in class
function foo() {
    var x = 0;
    while (x <= 5){
        pred(x <= 5);
        pred(x == 5);
        x = x + 1;
    }
    assert(x == 6);
}
